--- a/style.css
+++ b/style.css
@@ -18,9 +18,97 @@ body {
   /*border: solid 1px #fff;*/
   padding: 0;
   margin: 0;
-  /*overflow-x: hidden;*/
-  /*overflow-y: hidden;*/
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
+
+/*隱藏畫面*/
+.drag{
+  position: absolute;
+  top: 0px;
+  visibility: hidden;
+}
+
+@media only screen and (max-width: 1900px) {
+  .section,.section1,#name,#section3,#section5,#section6,#section4,#section7,#section8{
+    display: none;
+  }
+  .drag{
+    visibility: visible;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
+
+  }
+  .drag-container{
+    width: 100%;
+  
+    padding: relative;
+    /*border: 1px solid #000;*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    
+    font-weight: 500;
+    
+    animation: heartmove ease-in-out 2s infinite;
+    animation-direction: alternate;
+  }
+  .drag-container svg{
+    /*top: 0px;*/
+    position: relative;
+    transform: translate(0%,-40%);
+    
+    /*border: 2px solid #000;*/
+  }
+  .drag p{
+    top: 50vh;
+    text-align: center;
+    position: absolute;
+  }
+  
+}
+@keyframes bodymove{
+  from{
+
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+}
+@keyframes h1move{
+  from{
+    opacity: 0;
+  }
+  to{
+    
+    opacity: 1;
+  }
+}
+@keyframes heartmove{
+  0% {
+    transform: rotateZ(0deg);
+    transform-origin: 50% 50%;
+  }
+  
+  50%{
+    transform: rotateZ(-30deg);
+    transform-origin: 50% 50%;
+  }
+  
+  100%{
+    transform: rotateZ(30deg);
+    transform-origin: 50% 50%;
+  }
+}
+/**/
 
 #section{
   position: relative;
@@ -256,8 +344,8 @@ hr {
 /*before*/
 
 .slide-top {
-  -webkit-animation: slide-top 2.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.5s forwards;
-          animation: slide-top 2.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.5s forwards;
+  -webkit-animation: slide-top 2.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 2.5s forwards;
+          animation: slide-top 2.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 2.5s forwards;
 }
  
 @-webkit-keyframes slide-top {
@@ -476,8 +564,8 @@ hr {
 
 
 .del-slide-top {
-  -webkit-animation: del-slide-top 2.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 3s forwards;
-          animation: del-slide-top 2.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 3s forwards;
+  -webkit-animation: del-slide-top 2.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 10s forwards;
+          animation: del-slide-top 2.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) 10s forwards;
 }
 
 @-webkit-keyframes del-slide-top {
@@ -578,7 +666,7 @@ hr {
   text-align: center;
   /*border: 1px solid #000;*/
   border-radius: 20px;
-  top: 10px;
+  top: 10%;
   
   letter-spacing: .1rem;
   line-height: 2rem;
@@ -589,7 +677,9 @@ hr {
 .title_name strong{
   font-size: 30px;
 }
-
+#title-span{
+  color:  darkorange;
+}
 .total-homename{
 
   font-size: 20px;
@@ -610,6 +700,7 @@ hr {
 .bg-name:hover{
   background: Moccasin;
   color: DarkOrange;
+  cursor: pointer;
 }
 
 /*left文字圖片顯示*/
@@ -617,7 +708,7 @@ hr {
 .left-name-show{
   position: absolute;
   top: 1%;
-  max-width: 50%;
+  max-width: 70%;
   /*right: 10px;*/
   /*left: 50%;*/
   text-align: center;
@@ -625,12 +716,13 @@ hr {
   
 }
 
-.left-name-show h5{
+.left-name-show h3{
   /*border: 1px soslid #000;*/
-  padding: 4px 5px;
-  line-height: 1.3rem;
-  letter-spacing: 2px;
+  padding: 8px 10px;
+  line-height: 2rem;
+  letter-spacing: .2vw;
   background: rgba(255, 239, 213,.7);
+  font-size: 1.2rem;
 }
 
 /**/
@@ -658,8 +750,8 @@ i{
 }
 
 .s2-up{
-  animation: s2-button-up 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-  animation-delay: 3.5s;
+  animation: s2-button-up 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) 10s both;
+  animation-delay: 10s;
 }
 
 .s3-button{
@@ -739,7 +831,7 @@ i{
 
 .slide{
   width: 20%;
-  transition: 2s;
+  transition: 4s;
 }
 
 .slide img{
@@ -1219,12 +1311,14 @@ section .s4-text span{
   flex-direction: column;
 
 
+
+
 }
 
 .s5-text h2{
   position: relative;
-  top: --10%;
-  letter-spacing: 2px;
+  
+  letter-spacing: 5px;
 }
 .s5-text span{
   color:  darkorange;
@@ -1267,16 +1361,201 @@ section .s4-text span{
   /*transform: scale(1.1);*/
 }
 
-/*s6*/
-.section6{
-  width: 100%; 
+
+#section6{
+  width: 100%;
   height: 100vh;
 
-  /*flex-direction: column;*/
+  position: relative;
 
+  overflow: hidden;
+  /*background-color: #fff;*/
+
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/*#demo-svg{
+  width: 100%;
+  height: 100vh;
+
+  position: absolute;
+
+ */
+}
+#point{
+  display: none;
+}
+.place_point{
+  width: 100px;
+  height: 100px;
+  background: #fff;
+  border: 1px solid #000;
+  border-radius: 100%;
+  right: 50%;
+  top: 50%;
+  position: absolute;
+}
+#point circle{
+  cursor: pointer;
+  background: darkorange;
+
+}
+#point circle:hover{
+  transform: translate(0px,-5px);
+  background: grey;
+}
+#section6{
+  background: #c6c6c6;
+}
+
+.left-box{
+  position: absolute;
+
+  width:40%;
+  height: 100vh;
+
+  background: rgb(220, 220, 220);
+
+  left: -40%;
+  top: 0px;
+
+  opacity: 0.97;
+
+  transition: 2s;
+
+  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.6);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  overflow: hidden;
+}
+
+.top-photo{
+  position: relative;
+  width: 100%;
+  height: 50%;
+
+  /*background: #000;*/
+  top: 0%;
+}
+.bottom-text{
+  position: relative;
+
+  width: 100%;
+  height: 62%;
+
+  top: -2%;
+
+/*  background: blue;
+*/
+  text-align: center;
+
+  padding: 0px 10px;
+
+  margin-top: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+
+}
+
+.bottom-text p{
+  position: relative;
+  
+  width: 70%;
+
+  line-height: 2rem;
+
+}
+.bottom-text h2{
+  color: darkorange;
+  letter-spacing: 2px;
+
+}
+
+.arrow-left{
+  position: absolute;
+
+  font-size: 2rem;
+
+  left: 95%;
+  top: 95%;
+  transform: translate(-50%,-50%);
+
+  color: darkorange;
+
+  cursor: pointer;
+}
+
+.top-photo{
+  background-image: url("image/7.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.down{
+  font-size: 2rem;
+  color: white;
+}
+.down:hover{
+  color: #c6c6c6;
+}
+
+#tw-map{
+  display: flex;
+  justify-content: center;
+  
+  text-decoration: none;
+
+  position: absolute;
+
+  bottom: 2%;
+
+  width: 30px;
+  height: 30px;
+
+  border-radius: 100%;
+  cursor: pointer;
+
+  background: darkorange;
+
+
+}
+#animation-name{
+  display: flex;
+  justify-content: center;
+  
+  text-decoration: none;
+
+  position: absolute;
+
+  bottom: 2%;
+
+  width: 30px;
+  height: 30px;
+
+  border-radius: 100%;
+  cursor: pointer;
+
+  background: darkorange;
+  left: 50%;
+  bottom: 1%;
+  transform: translate(-50%,-50%);
+}
+
+.section7{
+  width: 100%;
+  height: 100vh;
 
   position: relative;
 
@@ -1284,65 +1563,105 @@ section .s4-text span{
   justify-content: center;
   align-items: center;
 
-  flex-direction: column;
 
 
 }
 
-.section6 svg{
+.s7-left{
+  width: 45%;
+  height: 100%;
+
   position: relative;
-  top: 21%;
+
+  
+
+  background: #fff;
 }
 
-.section6 circle{
-  fill: darkorange;
-  transition: .5s;
+.s7-right{
+  width: 55%;
+  height: 100%;
+
+  background: url('image/100.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
 
 }
+.s7-left,.s8-left{
+  position: relative;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-.section6 path{
-  fill: #c6c6c6;
+  flex-direction: column;
+}
+.s7-left h2{
+  color: darkorange;
+  letter-spacing: 5px;
+}
+.s7-left p{
+  max-width: 80%;
+  letter-spacing: 3px;
 }
 
-.section6 circle:hover{
-  transform: translate(-5px,-5px);
+.section8{
+  width: 100%;
+  height: 100vh;
+
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.s8-left{
+  width: 45%;
+  height: 100%;
+
+  position: relative;
+
+  
+
+  background: #fff;
+}
+.s8-right{
+  width: 55%;
+  height: 100%;
+  position: relative;
+  background: url("image/101.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#animation-name-1{
+  display: flex;
+  justify-content: center;
+  
+  text-decoration: none;
+
+  position: absolute;
+
+  bottom: 2%;
+
+  width: 30px;
+  height: 30px;
+
+  border-radius: 100%;
   cursor: pointer;
+
+  background: darkorange;
+  left: 50%;
+  bottom: 1%;
+  transform: translate(-50%,-50%);
 }
-
-.section6 h2{
-  top: 25%;
-  color: black;
-  position: absolute;
-
-  max-width: 50%;
-
-  line-height: 2rem;
-  letter-spacing: 1px;
-
-  background: rgba(255,255,255,0.5);
-
+.s8-left h2{
+  color: darkorange;
+  letter-spacing: 5px;
 }
-
-.section6 p{
-  font-size: 30px;
-  position: absolute;
-  background: rgba(255,255,255,0.5);
-  max-width: 70%;
+.s8-left p{
+  max-width: 80%;
+  letter-spacing: 3px;
 }
-.section6 h3{
-  top: 25%;
-  color: black;
-  position: absolute;
-
-  max-width: 50%;
-
-  line-height: 2rem;
-  letter-spacing: 1px;
-
-  background: rgba(255,255,255,0.5);
-
-}
-
-
-
-
